footer: fix user avatar alignment

--- a/src/css/FooterBar.css
+++ b/src/css/FooterBar.css
@@ -76,6 +76,7 @@
   @descendent avatar {
     width: 50px;
     height: 50px;
+    margin: auto;
   }
 }
 
